# libcbdetect

./: CMakeLists.txt
src/: board_energy.cpp  board_energy.h  boards_from_corners.cpp  boards_from_corners.h  filter_corners.cpp  find_corners.cpp  find_corners.h  find_modes_meanshift.cpp  get_init_location.cpp  image_normalization_and_gradients.cpp  init_board.cpp  weight_mask.cpp
